Leave chart ranging in god's hands

--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,13 @@ mainClassName = 'pl.edu.pw.mini.symulacje.Launcher'
 dependencies {
     implementation 'net.objecthunter:exp4j:0.4.8'
     implementation 'org.jetbrains:annotations:22.0.0'
+    implementation 'org.gillius:jfxutils:1.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'org.assertj:assertj-core:3.21.0'
-    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.assertj:assertj-core:3.22.0'
+    testImplementation 'org.mockito:mockito-core:4.2.0'
 }
 
 test {
